--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,18 @@
+aiogram==2.25.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
 attrs==22.2.0
+Babel==2.9.1
 certifi==2022.12.7
-charset-normalizer==3.0.1
-colorama==0.4.6
-Django==2.2.19
-exceptiongroup==1.1.0
+charset-normalizer==3.1.0
 flake8==6.0.0
+frozenlist==1.3.3
 idna==3.4
-iniconfig==2.0.0
+magic-filter==1.0.9
 mccabe==0.7.0
-packaging==23.0
-pluggy==1.0.0
+multidict==6.0.4
 pycodestyle==2.10.0
 pyflakes==3.0.1
-pytest==7.2.1
 pytz==2022.7.1
-requests==2.28.2
-sqlparse==0.4.3
-tomli==2.0.1
-urllib3==1.26.14
+yarl==1.8.2
